# BingGPT

./: Cargo.toml  LICENSE  README.md  README_CN.md  bing-cookies.toml  todo.md
.github/workflows/: release.yaml  rust.yml
binggpt/: Cargo.toml
binggpt-cli/: Cargo.toml  README.md
binggpt-cli/src/: client.rs  main.rs  user_input.rs
binggpt/src/: bing.rs  http.rs  lib.rs  msg.rs
i18n/: README-cn.md
src/: lib.rs  main.rs
src/pkg/: bing.rs  client.rs  http.rs  mod.rs
src/pkg/client/: mod.rs  user_input.rs
src/pkg/core/: chathub.rs  conversation.rs  http.rs  mod.rs  msg.rs  tools.rs
