[package]
name = "binggpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
colored = "2.0.0"
futures = "0.3.26"
gjson = "0.8.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
utf8_slice = "1.0.0"

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
