[package]
name = "binggpt"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jlvihv/BingGPT"
keywords = ["binggpt", "bing-gpt", "BingGPT", "chatgpt", "ChatGPT"]
readme = "README.md"
repository = "https://github.com/jlvihv/BingGPT"
description = "BingGPT command line client, written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "binggpt"
path = "src/bin/binggpt.rs"

[dependencies]
anyhow = "1.0.69"
colored = "2.0.0"
futures = "0.3.26"
gjson = "0.8.1"
reqwest = "0.11.14"
rustyline = "10.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
utf8_slice = "1.0.0"

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
