[package]
name = "client"
version = "0.1.5"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jlvihv/BingGPT"
keywords = ["binggpt", "bing-gpt", "BingGPT", "chatgpt", "ChatGPT"]
readme = "README.md"
repository = "https://github.com/jlvihv/BingGPT"
description = "BingGPT command line client, written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "binggpt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
binggpt = { path = "../binggpt" }
colored = "2.0.0"
rustyline = "11.0.0"
tokio = { version = "1.25.0", features = ["full"] }
utf8_slice = "1.0.0"
